# sd2md

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sd2md/: __main__.py  cli.py  convert.py  fetch.py  mathml.py  metadata.py  output.py
