[project]
name = "sd2md"
version = "0.1.0"
description = "Convert ScienceDirect articles to Markdown"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",
]

[project.scripts]
sd2md = "sd2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
